:lipstick: Fix some issues in dark mode

--- a/src/styles/reset/index.css
+++ b/src/styles/reset/index.css
@@ -1,3 +1,10 @@
+
+@font-face {
+  font-family: Graphik;
+  src: url('../../../public/assets/fonts/graphik-bold.otf');
+  font-weight: bold;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -19,4 +26,8 @@ ul, h1, h2, h3, p, fieldset {
   margin: 0;
   padding: 0;
   border: none;
+}
+
+p {
+  font-family: Helvetica;
 }
